[GTK] Touch slider test fails due to assertion in webkitWebViewBaseTouchEvent() https://bugs.webkit.org/show_bug.cgi?id=153829

Patch by Adrien Plazas <aplazas@igalia.com> on 2016-02-29
Reviewed by Carlos Garcia Campos.

Source/WebKit2:

Once a touch event sequence is identified as a gesture, remove it
from the list of handled touch events.

* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseTouchEvent):

LayoutTests:

* platform/gtk/TestExpectations:
Remove now passing tests from the expected failures.

Canonical link: https://commits.webkit.org/172912@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@197351 268f45cc-cd09-0410-ab3c-d52691b4dbfc